--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ position: relative;
  @media(min-width: 320px) and (max-width: 760px)
      {
 .fondo{
-background: url(https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=773&q=80);
+background: url(https://images.unsplash.com/photo-1469228252629-cbe7cb7db2c8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=773&q=80);
 
 }
 .container-fluid{
